==> feaser/microtbx-demos/demos/modbus/ARM_CORTEXM_ST_Nucleo_F091RC/tbxmb_port.c <==
#include "microtbx.h"                            /* MicroTBX library                   */
#include "microtbxmodbus.h"                      /* MicroTBX-Modbus library            */
#include "stm32f0xx_ll_usart.h"                  /* STM32 LL USART                     */
#include "stm32f0xx_ll_gpio.h"                   /* STM32 LL GPIO                      */
#include "stm32f0xx_ll_tim.h"                    /* STM32 LL TIM                       */

void TbxMbPortUartInit(tTbxMbUartPort     port, 
                       tTbxMbUartBaudrate baudrate,
                       tTbxMbUartDatabits databits, 
                       tTbxMbUartStopbits stopbits,
                       tTbxMbUartParity   parity)
{
  LL_USART_InitTypeDef USART_InitStruct = { 0 };
  const uint32_t baudrateLookup[TBX_MB_UART_NUM_BAUDRATE] =
  {
    1200,                                                  /* TBX_MB_UART_1200BPS      */
    2400,                                                  /* TBX_MB_UART_2400BPS      */
    4800,                                                  /* TBX_MB_UART_4800BPS      */
    9600,                                                  /* TBX_MB_UART_9600BPS      */
    19200,                                                 /* TBX_MB_UART_19200BPS     */
    38400,                                                 /* TBX_MB_UART_38400BPS     */
    57600,                                                 /* TBX_MB_UART_57600BPS     */
    115200                                                 /* TBX_MB_UART_115200BPS    */
  };
  const uint32_t stopbitsLookup[TBX_MB_UART_NUM_STOPBITS] =
  {
    LL_USART_STOPBITS_1,                                   /* TBX_MB_UART_1_STOPBITS   */
    LL_USART_STOPBITS_2                                    /* TBX_MB_UART_2_STOPBITS   */
  };
  const uint32_t parityLookup[TBX_MB_UART_NUM_PARITY] =
  {
    LL_USART_PARITY_ODD,                                   /* TBX_MB_ODD_PARITY        */
    LL_USART_PARITY_EVEN,                                  /* TBX_MB_EVEN_PARITY       */
    LL_USART_PARITY_NONE                                   /* TBX_MB_NO_PARITY         */
  };

  /* Make sure the requested serial port is actually supported by this module. */
  TBX_ASSERT(port <= (sizeof(uartChannel)/sizeof(uartChannel[0])));
  
  /* Only continue with a supported port. */
  if (port <= (sizeof(uartChannel)/sizeof(uartChannel[0])))
  {
    /* Disable and reset the UART peripheral. */
    LL_USART_Disable(uartChannel[port]);
    LL_USART_DeInit(uartChannel[port]);
    /* Configure UART peripheral. */
    USART_InitStruct.BaudRate = baudrateLookup[baudrate];
    USART_InitStruct.TransferDirection = LL_USART_DIRECTION_TX_RX;
    USART_InitStruct.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
    USART_InitStruct.OverSampling = LL_USART_OVERSAMPLING_16;
    USART_InitStruct.StopBits = stopbitsLookup[stopbits];
    USART_InitStruct.Parity = parityLookup[parity];
    /* One extra data bit needs to be configured for the parity bit, if enabled. */
    switch (databits)
    {
    case TBX_MB_UART_7_DATABITS:
      USART_InitStruct.DataWidth = (parity == TBX_MB_NO_PARITY) ? LL_USART_DATAWIDTH_7B : 
                                                                  LL_USART_DATAWIDTH_8B;
      break;

    case TBX_MB_UART_8_DATABITS:
    default:
      USART_InitStruct.DataWidth = (parity == TBX_MB_NO_PARITY) ? LL_USART_DATAWIDTH_8B : 
                                                                  LL_USART_DATAWIDTH_9B;
      break;
    }
    /* Initialize and enable the UART peripheral. */
    LL_USART_Init(uartChannel[port], &USART_InitStruct);
    LL_USART_Enable(uartChannel[port]);
    /* Enable the receiver interrupt. */
    LL_USART_EnableIT_RXNE(uartChannel[port]);
  }
}

uint8_t TbxMbPortUartTransmit(tTbxMbUartPort         port, 
                              uint8_t        const * data, 
                              uint16_t               len)
{
  uint8_t result = TBX_OK;

  /* Make sure the requested serial port is actually supported by this module. */
  TBX_ASSERT(port <= (sizeof(uartChannel)/sizeof(uartChannel[0])));
  
  /* Only continue with a supported port. */
  if (port <= (sizeof(uartChannel)/sizeof(uartChannel[0])))
  {
    /* Prepare the transmit information taking into account that this function will already
     * start the transmission of the first byte.
    */
    transmitInfo[port].data = data;
    transmitInfo[port].totalLen = len;
    transmitInfo[port].nextIdx = 1U;
    /* Switch the hardware from reception to transmission mode. */
    TbxMbPortUartDriverEnable(port, TBX_ON);
    /* Kick off the transmission with the first data byte. */
    LL_USART_TransmitData8(uartChannel[port], transmitInfo[port].data[0]);
    /* Enable the transmit complete interrupt if just transmitting one byte, otherwise
     * enable the transmit data register empty interrupt.
     */
    if (len == 1U)
    {
      LL_USART_EnableIT_TC(uartChannel[port]);
    }
    else
    {
      LL_USART_EnableIT_TXE(uartChannel[port]);
    }
  }
  /* Give the result back to the caller. */
  return result;
}

static void TbxMbPortUartDriverEnable(tTbxMbUartPort port,
                                      uint8_t        value)
{
  /* Make sure the requested serial port is actually supported by this module. */
  TBX_ASSERT(port <= (sizeof(uartChannel)/sizeof(uartChannel[0])));
  
  /* Only continue with a supported port. */
  if (port <= (sizeof(uartChannel)/sizeof(uartChannel[0])))
  {
    /* Only USART1 on this board is configured for RS485, with an RS485 transceiver on
     * the Waveshare RS485/CAN shield. The transceiver's DE/NRE pin is connected to D7 of
     * the Arduino connector, which is GPIO PA8.
     */
    if (port == TBX_MB_UART_PORT1)
    {
      if (value == TBX_ON)
      {
        /* Set the DE/NRE pin(s) to logic high to switch to transmission mode. */
        LL_GPIO_SetOutputPin(GPIOA, LL_GPIO_PIN_8);
      }
      else
      {
        /* Set the DE/NRE pin(s) to logic low to switch to reception mode. */
        LL_GPIO_ResetOutputPin(GPIOA, LL_GPIO_PIN_8);
      }
    }
  }
}

uint16_t TbxMbPortTimerCount(void)
{
  /* Obtain the current value of TIM7's free running counter. */
  return (uint16_t)LL_TIM_GetCounter(TIM7);
}
