==> feaser/openblt/Target/Demo/ARMCM4_STM32F4_Nucleo_F446RE_CubeIDE/Prog/App/tbxmb_port.c <==
#include "microtbx.h"                            /* MicroTBX library                   */
#include "microtbxmodbus.h"                      /* MicroTBX-Modbus library            */
#include "stm32f4xx_hal.h"                       /* STM32 HAL drivers                  */

void TbxMbPortUartInit(tTbxMbUartPort     port, 
                       tTbxMbUartBaudrate baudrate,
                       tTbxMbUartDatabits databits, 
                       tTbxMbUartStopbits stopbits,
                       tTbxMbUartParity   parity)
{
  uint32_t wordLength;
  const uint32_t baudrateLookup[TBX_MB_UART_NUM_BAUDRATE] =
  {
    1200,                                                  /* TBX_MB_UART_1200BPS      */
    2400,                                                  /* TBX_MB_UART_2400BPS      */
    4800,                                                  /* TBX_MB_UART_4800BPS      */
    9600,                                                  /* TBX_MB_UART_9600BPS      */
    19200,                                                 /* TBX_MB_UART_19200BPS     */
    38400,                                                 /* TBX_MB_UART_38400BPS     */
    57600,                                                 /* TBX_MB_UART_57600BPS     */
    115200                                                 /* TBX_MB_UART_115200BPS    */
  };
  const uint32_t stopbitsLookup[TBX_MB_UART_NUM_STOPBITS] =
  {
    UART_STOPBITS_1,                                       /* TBX_MB_UART_1_STOPBITS   */
    UART_STOPBITS_2                                        /* TBX_MB_UART_2_STOPBITS   */
  };
  const uint32_t parityLookup[TBX_MB_UART_NUM_PARITY] =
  {
    UART_PARITY_ODD,                                       /* TBX_MB_ODD_PARITY        */
    UART_PARITY_EVEN,                                      /* TBX_MB_EVEN_PARITY       */
    UART_PARITY_NONE                                       /* TBX_MB_NO_PARITY         */
  };

  /* Make sure the requested serial port is actually supported by this module. */
  TBX_ASSERT(port <= (sizeof(uartChannel)/sizeof(uartChannel[0])));

  /* Initialize the channel's handle. */
  uartChannel[port].handle.Instance = uartChannel[port].instance;
  uartChannel[port].handle.Init.Mode = UART_MODE_TX_RX;
  uartChannel[port].handle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
  uartChannel[port].handle.Init.OverSampling = UART_OVERSAMPLING_16;
  uartChannel[port].handle.Init.BaudRate = baudrateLookup[baudrate];
  uartChannel[port].handle.Init.Parity = parityLookup[parity];
  uartChannel[port].handle.Init.StopBits = stopbitsLookup[stopbits];
  /* The UART peripheral on the STM32F4 does not support 7 databits, without a parity
   * bit.
   */
  TBX_ASSERT(!((databits == TBX_MB_UART_7_DATABITS) && (parity == TBX_MB_NO_PARITY)));
  /* With parity enabled, one more data bit needs to be configured. */
  if ((databits == TBX_MB_UART_8_DATABITS) && (parity != TBX_MB_NO_PARITY))
  {
    wordLength = UART_WORDLENGTH_9B;
  }
  /* The else also handles the configuration of 7 databits with a parity bit. */
  else
  {
    wordLength = UART_WORDLENGTH_8B;
  }
  uartChannel[port].handle.Init.WordLength = wordLength;
  /* Initialize the channel. */
  HAL_UART_Init(&uartChannel[port].handle);
  /* Switch the hardware to reception mode. */
  TbxMbPortUartDriverEnable(port, TBX_OFF);
  /* Kick off first byte reception. */
  HAL_UART_Receive_IT(&uartChannel[port].handle, &uartChannel[port].rxByte, 1);
}

uint8_t TbxMbPortUartTransmit(tTbxMbUartPort         port, 
                              uint8_t        const * data, 
                              uint16_t               len)
{
  uint8_t result = TBX_ERROR;

  /* Switch the hardware from reception to transmission mode. */
  TbxMbPortUartDriverEnable(port, TBX_ON);
  /* Kick off the transmission. */
  if (HAL_UART_Transmit_IT(&uartChannel[port].handle, (uint8_t *)data, len) == HAL_OK)
  {
    result = TBX_OK;
  }
  /* Give the result back to the caller. */
  return result;
}

static void TbxMbPortUartDriverEnable(tTbxMbUartPort port,
                                      uint8_t        value)
{
  /* Only USART1 on this board is configured for RS485, with an RS485 transceiver on
   * the Waveshare RS485/CAN shield. The transceiver's DE/NRE pin is connected to D7 of
   * the Arduino connector, which is GPIO PA8.
   */
  if (port == TBX_MB_UART_PORT1)
  {
    if (value == TBX_ON)
    {
      /* Set the DE/NRE pin(s) to logic high to switch to transmission mode. */
      HAL_GPIO_WritePin(GPIOA, GPIO_PIN_8, GPIO_PIN_SET);
    }
    else
    {
      /* Set the DE/NRE pin(s) to logic low to switch to reception mode. */
      HAL_GPIO_WritePin(GPIOA, GPIO_PIN_8, GPIO_PIN_RESET);
    }
  }
}

uint16_t TbxMbPortTimerCount(void)
{
  static uint8_t           initialized = TBX_FALSE;
  static TIM_HandleTypeDef timHandle   = { 0 };

  /* Perform one-time initialization. */
  if (initialized == TBX_FALSE)
  {
    initialized = TBX_TRUE;
    /* The basic timer is clock by PCLK1 * 2 on the STM32F4. */
    uint32_t timFreq = HAL_RCC_GetPCLK1Freq() * 2;
    timHandle.Instance = TIM7;
    timHandle.Init.Prescaler = (timFreq / 20000U) - 1U;
    timHandle.Init.CounterMode = TIM_COUNTERMODE_UP;
    timHandle.Init.Period = 65535;
    timHandle.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_DISABLE;
    HAL_TIM_Base_Init(&timHandle);
    __HAL_TIM_ENABLE(&timHandle);
  }
  /* Read out the current value of the timer's free running counter and return it. */
  return (uint16_t)__HAL_TIM_GET_COUNTER(&timHandle);
}
